add DataBase Project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ PythonAppPyInstaller/__pycache__
 PythonAppPyInstaller/build
 PythonAppPyInstaller/dist
 PythonAppPyInstaller/records
+*.sqlite
+*.sqlite3
